rust/node-execute/src/snapshots/md_articles@code-relations.md-change.snap
---
source: rust/node-execute/src/lib.rs
expression: "&patch"

---
{
  "ops": [
    {
      "type": "Add",
      "address": [
        "content",
        4,
        "outputs"
      ],
      "value": [
        2.0
      ],
      "length": 1
    },
    {
      "type": "Add",
      "address": [
        "content",
        5,
        "content",
        3,
        "output"
      ],
      "value": 3.0,
      "length": 1
    },
    {
      "type": "Add",
      "address": [
        "content",
        5,
        "content",
        5,
        "output"
      ],
      "value": 4.0,
      "length": 1
    },
    {
      "type": "Add",
      "address": [
        "content",
        8,
        "content",
        1,
        "output"
      ],
      "value": 2.0,
      "length": 1
    },
    {
      "type": "Add",
      "address": [
        "content",
        8,
        "content",
        3,
        "output"
      ],
      "value": 4.0,
      "length": 1
    },
    {
      "type": "Add",
      "address": [
        "content",
        11,
        "outputs"
      ],
      "value": [
        4.0
      ],
      "length": 1
    }
  ]
}
